--- a/resume/index.html
+++ b/resume/index.html
@@ -2,8 +2,106 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link href="files/css" rel="stylesheet">
+<link rel="stylesheet" href="Resumestyles.css">
 <title>index.html</title>
 </head>
+<body background="notebook.png" style="background-repeat:no-repeat;background-size:100% 100%"> 
+
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap');
+
+.image-resize {
+  height: 300px;
+  object-fit: cover;
+  object-position: center center;
+}
+
+body {
+  font-family: 'IM Fell English', serif;
+  font-size: 100%;
+  line-height: 175%;
+  margin: 0 10%;
+  color: black;
+  background-color: #;
+  }
+   
+a {
+  text-decoration: none;
+}
+a:link {
+    color: black;
+}
+a:visited {
+  color: #d1633c;
+}
+a:focus, a:hover {
+  color: #d1633c;
+  background-color: #9fc2da;
+}
+a:active {
+  color: #f0f;
+  background-color: #fff;
+}
+
+h1 {
+    text-align: center;
+    font-family: serif;
+    font-weight: normal;
+    text-transform: uppercase;
+    border-bottom: 2px solid #466675;
+    margin-top: 30px;
+  }
+  h2 {
+    color: #0000A0;
+    font-size: 1em;
+  }
+  h3 {
+    text-align: center;
+    font-family: serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1em;
+    margin-top: 50px;
+  }
+  h4 {
+    text-align: center;
+    font-family: sans-serif;
+    font-weight: normal;
+    font-size: 1em;
+    margin-top: 5px;
+
+dt {
+  font-weight: bold;
+}
+strong {
+  font-style: italic;
+}
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+
+  li {
+    float: left;
+  }
+
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
+</style>
 
 <body>
 <h1>Hello There</h1>
@@ -38,14 +136,215 @@
 </ul>
 <h2>Work Samples</h2>
 <p>
-  <a href="animal morph magazine.html"><img src="images/Animal Morph Magazine.jpg" alt="A animal morph on a magazine cover" width="200" height="200"></a>
-  <a href="bouncing ball.html"><img src="images/Animation.gif" alt="bouncing ball" width="200" height="200"></a>
-  <a href="cute ice cream.html"><img src="images/cute ice cream.png" alt="cute ice cream" width="200" height="200"></a>
-  <a href="hot sauce ad.html"><img src="images/Hot Sauce Ad.jpg" alt="hot sauce ad" width="200" height="200"></a>
-  <a href="travel ad.html"><img src="images/travel ad.png" alt="travel ad" width="200" height="200"></a>
+  <a href="animal morph magazine.html"><img src="images/Animal Morph Magazine.jpg" alt="A animal morph on a magazine cover" width="250" height="250"></a>
+  <a href="bouncing ball.html"><img src="images/Animation.gif" alt="bouncing ball" width="250" height="250"></a>
+  <a href="cute ice cream.html"><img src="images/cute ice cream.png" alt="cute ice cream" width="250" height="250"></a>
+  <a href="hot sauce ad.html"><img src="images/Hot Sauce Ad.jpg" alt="hot sauce ad" width="250" height="250"></a>
+  <a href="quote.html"><img src="images/quote.png" alt="travel ad"  width="250" height="250"></a>
 </p>
 
 
   
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
