--- a/resume/quote.html
+++ b/resume/quote.html
@@ -5,6 +5,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Resume Gallery</title>
+  <body background="notebook.png" style="background-repeat:no-repeat;background-size:100% 100%"> 
+
 <style>
 body {
   margin: 0 10%;
