--- a/resume/hot sauce ad.html
+++ b/resume/hot sauce ad.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <title>Resume Gallery</title>
 <style>
+  <body background="notebook.png" style="background-repeat:no-repeat;background-size:100% 100%"> 
 body {
   margin: 0 10%;
   text-align: center;
