--- a/resume/quote.html
+++ b/resume/quote.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Resume Gallery</title>
-  <body background="notebook.png" style="background-repeat:no-repeat;background-size:100% 100%"> 
+  <body background="notebook.png" style="background-repeat:no-repeat;background-size:100% "> 
 
 <style>
 body {
