--- a/little cakes/little cakes/flavors/chocolover.html
+++ b/little cakes/little cakes/flavors/chocolover.html
@@ -78,7 +78,7 @@ h2 {
 
 <h1>Chocolover</h1>
 <center><img src="photos/chocolover.jfif" alt="chocolover" width="600" height="600"></center>
-<center><a href="flavors.html">[Back to Menu]</a></center>
+<center><a href="flavors.html">[Back to Flavors]</a></center>
 </body>
 </html>
 
