--- a/little cakes/little cakes/flavors/birthday cake.html
+++ b/little cakes/little cakes/flavors/birthday cake.html
@@ -78,7 +78,7 @@ h2 {
 
 <h1>Birthday Cake</h1>
 <center><img src="photos/birthday cake.jfif" alt="birthday cake" width="600" height="600"></center>
-<center><a href="flavors.html">[Back to Menu]</a></center>
+<center><a href="flavors.html">[Back to Flavors]</a></center>
 </body>
 </html>
 
