--- a/littlecakes/little cakes/flavors/red velvet.html
+++ b/littlecakes/little cakes/flavors/red velvet.html
@@ -78,7 +78,7 @@ h2 {
 
 <h1>Red Velvet</h1>
 <center><img src="photos/red velvet.jfif" alt="red velvet" width="600" height="600"></center>
-<center><a href="flavors.html">[Back to Menu]</a></center>
+<center><a href="flavors.html">[Back to Flavors]</a></center>
 </body>
 </html>
 
