--- a/littlecakes/little cakes/flavors/peanut butter.html
+++ b/littlecakes/little cakes/flavors/peanut butter.html
@@ -78,7 +78,7 @@ h2 {
 
 <h1>Peanut Butter Cup</h1>
 <center><img src="photos/peanut butter.jfif" alt="peanut butter cup" width="600" height="600"></center>
-<center><a href="flavors.html">[Back to Menu]</a></center>
+<center><a href="flavors.html">[Back to Flavors]</a></center>
 </body>
 </html>
 
