--- a/littlecakes/little cakes/flavors/cookies n cream.html
+++ b/littlecakes/little cakes/flavors/cookies n cream.html
@@ -78,7 +78,7 @@ h2 {
 
 <h1>Cookies N Cream</h1>
 <center><img src="photos/cookies n cream.jfif" alt="cookies n cream" width="600" height="600"></center>
-<center><a href="flavors.html">[Back to Menu]</a></center>
+<center><a href="flavors.html">[Back to Flavors]</a></center>
 </body>
 </html>
 
