--- a/blackgoose/jenskitchen/gallery/gallery.html
+++ b/blackgoose/jenskitchen/gallery/gallery.html
@@ -84,7 +84,7 @@ h2 {
 
 
 
-<h1>Blackstone Bistro Gallery</h1>
+<h1>Black Goose Bistro Gallery</h1>
 <p> Our patrons often stop to admire our fare with a quick Instagram before digging in. We've collected a few of our favorite shots here.</p>
 <div class="row">
     
