--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,7 @@ body {
   font-size: 100%;
   line-height: 175%;
   margin: 0 10%;
-  color: black;
+  color: blue;
   background-color: #;
   }
    
@@ -30,7 +30,7 @@ a {
   text-decoration: none;
 }
 a:link {
-    color: black;
+    color: blue;
 }
 a:visited {
   color: #d1633c;
@@ -49,7 +49,7 @@ h1 {
     font-family: serif;
     font-weight: normal;
     text-transform: uppercase;
-    border-bottom: 2px solid #466675;
+    border-bottom: 2px solid #ADD8E6;
     margin-top: 30px;
   }
   h2 {
@@ -104,7 +104,7 @@ strong {
 </style>
 
 <body>
-<h1>Hello There</h1>
+<h1>Hello There!</h1>
 <p>My name is Melinell Feliciano, I am a college student that is working towards an AS degree. I graduated from Revival Christian Academy, and I love everything in the design field. In my spare time I sometimes draw, paint, and do designs in my computer. My dream is to become a professional illustrator or an animator. I have a little experience in some adobe programs, but I'm still practicing and learning them.</p>
 <h2>Skills</h2>
 <ul>
