--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,7 @@ body {
   font-size: 100%;
   line-height: 175%;
   margin: 0 10%;
-  color: blue;
+  color: black;
   background-color: #;
   }
    
@@ -30,7 +30,7 @@ a {
   text-decoration: none;
 }
 a:link {
-    color: blue;
+    color: black;
 }
 a:visited {
   color: #d1633c;
