--- a/resume/index.html
+++ b/resume/index.html
@@ -49,7 +49,7 @@ h1 {
     font-family: serif;
     font-weight: normal;
     text-transform: uppercase;
-    border-bottom: 2px solid #ADD8E6;
+    border-bottom: 2px solid #0000A0;
     margin-top: 30px;
   }
   h2 {
