--- a/littlecakes/index.html
+++ b/littlecakes/index.html
@@ -1,78 +1,112 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Little Cakes</title>
-<body background="cupcake background.jpg" style="background-repeat:no-repeat;background-size:100% 100%"> 
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <title>Little Cakes</title>
+<body background="cupcake background.jpg" style="background-repeat:no-repeat;background-size:100% 100% 100%"> 
 
 
-  </head><body><div class="list">
-      <a class="active" href="index.html">Home</a>
+<style>
+  body {
+    background-image: url("cupcakes.jpg");
+    background-size: 100% 100% ;
+    background-repeat: no-repeat;
+    
+    }
+.bodytwo {
+  background-image: url("cupcake background.jpg");  
+  background-color: rgba(255, 255, 255, 1.0);
+  margin: 1% 8%;
+  border: none;
+  border-radius: 1px 1px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+  font-size: 1em;
+  padding: 2em;
+  text-align: center;
+}
+h1 {
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: normal;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    border-bottom: 2px dashed #654321;
+    padding-top: 1em;
+}
+h2 {
+   text-align: center;
+   font-family: 'Nixie One', cursive;
+   font-weight: normal;
+   font-size: 2em;
+}
+#navbar {
+  overflow: hidden;
+  background-color: #654321;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+.content {
+  padding: 16px;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+.back {
+  text-align: center;
+  color: #1138F7;
+  font-family: 'Montserrat', sans-serif;
+}
+a {
+  text-decoration: none;
+  color: #654321;
+}
+a:hover {
+  background-color: #111;
+}
+  footer {
+    border-top: 2px dashed #654321;
+    text-align: center;
+    padding-top: 1em;
+}
+  footer img { 
+    width: 40px;
+    height: 40px;
+    margin-left: .5em;
+    margin-right: .5em;
+}
+  div {
+    text-align: center;
+} 
+
+ 
+}
+  </style>
+</head>
+<body>
+<div class="bodytwo">
+<div id="navbar">
+<a class="active" href="index.html">Home</a>
       <a href="little cakes/news.html">News</a>
       <a href="little cakes/flavors/flavors.html">Flavors</a>
       <a href="little cakes/little cakes order.html">Order Online
       <a href="little cakes/contact.html">Contact Us
       </a>
-      
-  </div>
-
-<style>
-body {
-  background-color: #FFE6EE;
-  margin: 0 10%;
-  font-family: sans-serif;
-  }
-
-h1 {
-  text-align: center;
-  font-family: serif;
-  text-transform: uppercase;
-  border-bottom: 5px solid #654321;
-  margin-top: 30px;
-}
-
-h2 {
-  color: #654321;
-  font-size: 30px;
-}
-
-h3 {
-  color: #654321;
-  font-size: 20px;
-}
-
-.list {
-  background-color: ;
-  overflow: hidden;
-}
-
-
-.list a {
-  float: left;
-  color: #654321;
-  text-align: center;
-  padding: 14px 16px ;
-  text-decoration: none;
-  font-size: 20px;
-}
-
-
-.list a:hover {
-  background-color: #d28840;
-  color: white;
-}
-
-
-.list a.active {
-  background-color:  #654321;
-  color: white;
-}
-    order{
-    align-content: center;
-    }
-</style>
-
-
-<h1><img src="Little Cakes Logo.png" alt="logo"</h1>
+</div>
+<h1><img src="Little Cakes Logo.png" alt="logo"></h1>
 
 <h2>The Cupcakery</h2>
 <p>The Little Cakes offers fresh and delicious cupcakes in a relaxed atmosphere. The menu changes regularly to highlight the freshest, seasonal, and special flavors for everyone to enjoy.</p>
@@ -84,98 +118,17 @@ h3 {
 
 <p>"Very yummy cupcakes! extremely moist cake and delicious icing."- Ricardo C.</p>
 
-<br><footer>
-  <h3><center>Please visit our social media pages</center>
- <center><img src="icons.png" width="150px;" height="px"></center></h3>
 
-</footer></br>
+<footer>
+<p>Please visit our social media pages</p>
+<p><img src="icons_files/twitter.svg" alt="twitter">
+<img src="icons_files/facebook.svg" alt="facebook">
 
+<img src="icons_files/instagram.svg" alt="instagram">
 
 
-    <center>
-  
-   
+</footer>
+<p><small>Copyright 2021, Little Cakes. All Rights Reserved</small></p>
+</div>
 
-</center>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body></html>
