--- a/littlecakes/little cakes/little cakes order.html
+++ b/littlecakes/little cakes/little cakes order.html
@@ -1,82 +1,80 @@
 <!DOCTYPE html>
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
-   <title>Little Cakes: Cupcakes-on-Demand</title>
-   <body background="../cupcake background.jpg" style="background-repeat:no-repeat;background-size:100% 100%"> 
+  <title>Little Cakes: Cupcakes-on-Demand</title>
+<body background="cupcake background.jpg" style="background-repeat:no-repeat;background-size:100% 100% 100%"> 
 
-   </head><body><div class="list">
-      <a href="../index.html">Home</a>
+
+<style>
+  body {
+    background-image: url("../cupcakes.jpg");
+    background-size: 100% 100% ;
+    background-repeat: no-repeat;
+    
+    }
+.bodytwo {
+  background-image: url("../cupcake background.jpg");  
+  background-color: rgba(255, 255, 255, 1.0);
+  margin: 1% 8%;
+  border: none;
+  border-radius: 1px 1px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+  font-size: 1em;
+  padding: 2em;
+  text-align: ;
+}
+h1 {
+    text-align: ;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: normal;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    border-bottom: 2px dashed #654321;
+    padding-top: 1em;
+}
+h2 {
+   text-align: ;
+   font-family: 'Nixie One', cursive;
+   font-weight: normal;
+   font-size: 2em;
+}
+#navbar {
+  overflow: hidden;
+  background-color: #654321;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+
+
+}
+  
+  div {
+    text-align: ;
+} 
+
+ 
+}
+  </style>
+</head>
+<body>
+<div class="bodytwo">
+<div id="navbar">
+<a href="../index.html">Home</a>
       <a href="news.html">News</a>
       <a href="flavors/flavors.html">Flavors</a>
       <a class="active" href="little cakes order.html">Order Online</a>
       <a href="contact.html">Contact Us</a>
-  </div>
-   <style type="text/css">
-      ol, ul { 
-     list-style-type: none;
-      }
-       body {
-  background-color: #FFE6EE;
-  margin: 0 10%;
-  font-family: sans-serif;
-  }
-
-h1 {
-  text-align: center;
-  font-family: serif;
-  text-transform: ;
-  border-bottom: 5px solid #654321;
-  margin-top: 30px;
-}
-
-h2 {
-  color: #654321;
-  font-size: 30px;
-}
-
-.list {
-  background-color: ;
-  overflow: hidden;
-}
-
-
-.list a {
-  float: left;
-  color: #654321;
-  text-align: center;
-  padding: 14px 16px ;
-  text-decoration: none;
-  font-size: 20px;
-}
-
-
-.list a:hover {
-  background-color: #d28840;
-  color: white;
-}
-
-
-.list a.active {
-  background-color:  #654321;
-  color: white;
-}
-       fieldset {
-  border-color: #d28840; 
-}
-
-legend {
-  background-color: #d28840;
-  color: white;
-  padding: 5px 10px;
-}
-
-input {
-  margin: 5px;
-}
-       
-   </style>
-
+</div>
 <form action="https://melinellf21.github.io/fid/little cakes/little cupcakes order.php" method="post">
 
 
@@ -118,7 +116,7 @@ input {
 <h2>Design Your Cupcake Dream:</h2>
 
 <fieldset>
-<legend>cupcake specs</legend>
+<legend>Cupcake specs</legend>
 <fieldset>
 <p>Flavor <em>(Choose one)</em>:</p>
 <ul>
@@ -193,67 +191,6 @@ input {
 
 
 </body></html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
