--- a/littlecakes/little cakes/contact.html
+++ b/littlecakes/little cakes/contact.html
@@ -1,75 +1,110 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>Contact Little Cakes</title>
-<body background="../cupcake background.jpg" style="background-repeat:no-repeat;background-size:100%">
- </head><body><div class="list">
-      <a href="../index.html">Home</a>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <title>Little Cakes</title>
+<body background="cupcake background.jpg" style="background-repeat:no-repeat;background-size:100% 100% 100%"> 
+
+
+<style>
+  body {
+    background-image: url("../cupcakes.jpg");
+    background-size: 100% 100% ;
+    background-repeat: no-repeat;
+    
+    }
+.bodytwo {
+  background-image: url("../cupcake background.jpg");  
+  background-color: rgba(255, 255, 255, 1.0);
+  margin: 1% 8%;
+  border: none;
+  border-radius: 1px 1px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: normal;
+  font-size: 1em;
+  padding: 2em;
+  text-align: center;
+}
+h1 {
+    text-align: center;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: normal;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    border-bottom: 2px dashed #654321;
+    padding-top: 1em;
+}
+h2 {
+   text-align: center;
+   font-family: 'Nixie One', cursive;
+   font-weight: normal;
+   font-size: 2em;
+}
+#navbar {
+  overflow: hidden;
+  background-color: #654321;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+.content {
+  padding: 16px;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+.back {
+  text-align: center;
+  color: #1138F7;
+  font-family: 'Montserrat', sans-serif;
+}
+a {
+  text-decoration: none;
+  color: #654321;
+}
+a:hover {
+  background-color: #111;
+}
+  footer {
+    border-top: 2px dashed #654321;
+    text-align: center;
+    padding-top: 1em;
+}
+  footer img { 
+    width: 40px;
+    height: 40px;
+    margin-left: .5em;
+    margin-right: .5em;
+}
+  div {
+    text-align: center;
+} 
+
+ 
+}
+  </style>
+</head>
+<body>
+<div class="bodytwo">
+<div id="navbar">
+     <a href="../index.html">Home</a>
       <a href="news.html">News</a>
       <a href="flavors/flavors.html">Flavors</a>
       <a href="little cakes order.html">Order Online</a>
-      <a class="active" href="contact.html">Contact Us</a>
-  </div>
-      
-<style>
-body {
-  background-color: #FFE6EE;
-  margin: 0 10%;
-  font-family: sans-serif;
-  }
-
-h1 {
-  text-align: center;
-  font-family: serif;
-  text-transform: ;
-  border-bottom: 5px solid #654321;
-  margin-top: 30px;
-}
-
-h2 {
-  color: #654321;
-  font-size: 30px;
-}
-.list {
-    font-size: 20px;
-}
-.list {
-  background-color: ;
-  overflow: hidden;
-}
-
-
-.list a {
-  float: left;
-  color: #654321;
-  text-align: center;
-  padding: 14px 16px ;
-  text-decoration: none;
-  font-size: 20px;
-}
-
-
-.list a:hover {
-  background-color: #d28840;
-  color: black;
-}
-
-
-.list a.active {
-  background-color:  #654321;
-  color: white;
-}
-
-.list a.active {
-  background-color:  #654321;
-  color: white;
-}
-   
-</style>
-
-
-
-
+      <a class="active" href="contact.html">Contact Us</a> 
+</div>
 <h1>Contact Information</h1>
 
 <h2>Email:</h2>
@@ -85,249 +120,6 @@ h2 {
 
 
 
+
+
 </body></html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
