--- a/littlecakes/index.html
+++ b/littlecakes/index.html
@@ -8,7 +8,7 @@
 
 <style>
   body {
-    background-color: #654321;
+    background-image: url("brown.png") ;
     background-size: 100% 100% ;
     background-repeat: no-repeat;
     
