--- a/littlecakes/little cakes/flavors/flavors.html
+++ b/littlecakes/little cakes/flavors/flavors.html
@@ -8,7 +8,7 @@
 
 <style>
   body {
-    background-image: url("../../cupcakes.jpg");
+    background-image: url("../../brown.png");
     background-size: 100% 100% ;
     background-repeat: no-repeat;
     
